# orm_play

./: manage.py  pyproject.toml
main/: models.py
main/migrations/: 0001_initial.py
orm_play/: settings.py  urls.py  wsgi.py
