[tool.poetry]
name = "orm_play"
version = "0.0.1"
description = "experiments with django orm"
authors = ["Serhii <sz@3yourmind.com>"]

[tool.poetry.dependencies]
python = "~3.7"

django = "*"
sqlparse = '*'


[tool.poetry.dev-dependencies]
jupyter = '*'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
